--- a/docs/AMP-pars-report.Rmd
+++ b/docs/AMP-pars-report.Rmd
@@ -80,9 +80,10 @@ keyval = setNames(vars_desc, nm = vars)
 chordates_allStat = allStat_select(variable = 'phylum', string = 'Chordata')
 
 # select just the variables of interest
+# debugonce(allStat_get_pars)
 chordates_varsList = allStat_get_pars(variables = vars, list = chordates_allStat)
 
-chordates_df = do.call("rbind", chordates_varsList) %>%
+chordates_df = do.call("bind_rows", chordates_varsList) %>%
   data.frame %>%
   setNames(nm = vars)
 
@@ -100,4 +101,65 @@ chordates_df %>%
   mutate(cv = sd/mean) %>% 
   knitr::kable(digits = 5)
 
+```
+
+## Daphnia
+
+```{r daphnia}
+
+daphnia_df = allStat_select(variable = 'species', string = 'Daphnia_magna', grep = FALSE)
+daphnia_df %>% 
+  pluck(1) %>% 
+  knitr::kable(digits = 5)
+  
+```
+
+## Butter sole
+
+```{r sole}
+sole_df = allStat_select(variable = 'species.en', string = 'sole', grep = TRUE)
+
+sole_df %>% 
+  pluck(3) %>% 
+  knitr::kable(digits = 5)
+```
+
+## Amphipod
+
+```{r hyalella}
+hyalella_df = allStat_select(variable = 'species', string = 'Hyalella_azteca', grep = FALSE)
+hyalella_df %>% 
+  pluck(1) %>% 
+  knitr::kable(digits = 5)
+```
+
+## Atlantic cod
+
+```{r cod}
+cod_df = allStat_select(variable = 'species', string = 'Gadus_morhua', grep = FALSE)
+cod_df %>% 
+  pluck(1) %>% 
+  knitr::kable(digits = 5)
+```
+
+## Creaking frog
+
+```{r frog}
+frog_df = allStat_select(variable = 'species.en', string = 'Quacking frog', grep =FALSE)
+frog_df %>% 
+  pluck(1) %>% 
+  knitr::kable(digits = 5)
+
+```
+
+## Rat
+
+```{r rat}
+rat_df = allStat_select(variable = 'species.en', string = 'Laboratory rat', grep = FALSE)
+rat_df %>% 
+  pluck(1) %>% 
+  data.frame %>% 
+  rownames_to_column("variable") %>% 
+  filter(variable %in% vars) %>% 
+  knitr::kable(digits = 5)
 ```
